--- a/package.json
+++ b/package.json
@@ -39,17 +39,6 @@
     "@radix-ui/react-toast": "^1.2.6",
     "@radix-ui/react-tooltip": "^1.1.8",
     "@tailwindcss/typography": "^0.5.16",
-    "@tiptap/extension-link": "2.4.0",
-    "@tiptap/extension-table": "2.4.0",
-    "@tiptap/extension-table-cell": "2.4.0",
-    "@tiptap/extension-table-header": "2.4.0",
-    "@tiptap/extension-table-row": "2.4.0",
-    "@tiptap/extension-task-item": "2.4.0",
-    "@tiptap/extension-task-list": "2.4.0",
-    "@tiptap/extension-text-align": "2.4.0",
-    "@tiptap/extension-underline": "2.4.0",
-    "@tiptap/react": "2.4.0",
-    "@tiptap/starter-kit": "2.4.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
@@ -60,10 +49,10 @@
     "genkit": "1.12.0",
     "highlight.js": "^11.9.0",
     "html2canvas": "^1.4.1",
-    "jspdf": "^2.5.1",
+    "jspdf": "^3.0.3",
     "lodash": "^4.17.21",
     "lucide-react": "^0.395.0",
-    "next": "14.2.3",
+    "next": "^15.0.0",
     "next-themes": "^0.3.0",
     "patch-package": "^8.0.0",
     "postinstall-postinstall": "^2.1.0",
@@ -76,7 +65,7 @@
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7",
     "uuid": "^9.0.1",
-    "zod": "3.23.8"
+    "zod": "^3.24.1"
   },
   "devDependencies": {
     "@types/jspdf": "^2.0.0",
