--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "react-day-picker": "^8.10.1",
     "react-dom": "^18",
     "react-hook-form": "^7.52.1",
+    "react-quill": "^2.0.0",
     "react-webcam": "^7.2.0",
     "recharts": "^2.12.7",
     "tailwind-merge": "^2.3.0",
